# tz-weblog

./: LICENSE  Makefile  README.md  pyproject.toml  rules.bzl
src/tz_weblog/: __init__.py  main.py
tests/: Makefile  run.sh
tests/basic-index/: body.in.html  index.in.html  item.in.html  items.in.html  page1.md  page2.md  page3.md  site.yaml
tests/goldens/basic-index/: index.html  page1.html  page2.html  page3.html
tests/goldens/no-yaml/: index.html  page1.html  page2.html  page3.html
tests/no-yaml/: index.in.html  item.in.html  items.in.html  page1.md  page2.md  page3.md
